Use sessions instead of token hacks
