# server/internal/api/v1/openapi/api.go
@@ -1,7 +1,7 @@
-// Package swagger provides primitives to interact with the openapi HTTP API.
+// Package v1 provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version 2.4.1 DO NOT EDIT.
-package api
+package v1
 
 import (
 	"context"
@@ -101,6 +101,12 @@ type ServerInterface interface {
 	// (POST /login)
 	PostLogin(w http.ResponseWriter, r *http.Request)
 	// CORS preflight
+	// (OPTIONS /logout)
+	OptionsLogout(w http.ResponseWriter, r *http.Request)
+	// Log out the user
+	// (POST /logout)
+	PostLogout(w http.ResponseWriter, r *http.Request)
+	// CORS preflight
 	// (OPTIONS /query)
 	OptionsQuery(w http.ResponseWriter, r *http.Request)
 	// Query the uploaded document
@@ -154,6 +160,34 @@ func (siw *ServerInterfaceWrapper) PostLogin(w http.ResponseWriter, r *http.Requ
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.PostLogin(w, r)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
+// OptionsLogout operation middleware
+func (siw *ServerInterfaceWrapper) OptionsLogout(w http.ResponseWriter, r *http.Request) {
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.OptionsLogout(w, r)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
+// PostLogout operation middleware
+func (siw *ServerInterfaceWrapper) PostLogout(w http.ResponseWriter, r *http.Request) {
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.PostLogout(w, r)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -397,6 +431,10 @@ func HandlerWithOptions(si ServerInterface, options GorillaServerOptions) http.H
 	r.HandleFunc(options.BaseURL+"/login", wrapper.OptionsLogin).Methods("OPTIONS")
 
 	r.HandleFunc(options.BaseURL+"/login", wrapper.PostLogin).Methods("POST")
+
+	r.HandleFunc(options.BaseURL+"/logout", wrapper.OptionsLogout).Methods("OPTIONS")
+
+	r.HandleFunc(options.BaseURL+"/logout", wrapper.PostLogout).Methods("POST")
 
 	r.HandleFunc(options.BaseURL+"/query", wrapper.OptionsQuery).Methods("OPTIONS")
 
